newclay/test/Compiler/Propagation/Fail/SwitchStatementNotAllBranchesReturn2/main.clay

define main;
overload main() {
    switch (0)
    case (0) {
        return 1;
    }
    case (1) {
        return 2;
    }
}
